# napari-dextrusion

./: ._.git  ._.github  ._.gitignore  ._.napari-hub  ._.pre-commit-config.yaml  ._LICENSE  ._MANIFEST.in  ._README.md  ._pyproject.toml  ._setup.cfg  ._src  ._tox.ini  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: ._workflows
.github/workflows/: ._test_and_deploy.yml
.napari-hub/: ._DESCRIPTION.md  ._config.yml
src/: ._napari_dextrusion
src/napari_dextrusion/: .___init__.py  .__reader.py  .__sample_data.py  .__tests  .__widget.py  .__writer.py  ._napari.yaml  napari.yaml
src/napari_dextrusion/_tests/: .___init__.py  ._test_reader.py  ._test_sample_data.py  ._test_widget.py  ._test_writer.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
